...
                .autocapitalization(.none)
                .focused($isFocused)
                .background(Color(.clear))
                .overlay(RoundedRectangle(cornerRadius: searchTextfieldCornerRadius, style: .continuous)
                    .stroke(StatusColorView(state: $focusStatus).render, lineWidth: 1))
                .padding([.trailing, .leading], 16)
                .accessibilityIdentifier("searchTextField")
            }
            
            TVCustomScrollView(scrollOffset: $scrollOffset,
                               scrollTotalHeight: $scrollTotalHeight) { proxy in
                LazyVGrid(columns: gridColumns.getFitDeviceNumberColumns(), spacing: 0) {
                    ForEach(viewModel.movies) { movie in
                        if let poster = movie.moviePictures[Constants.imagePoster] {
                            MultiImageItemView(urlImage: poster, fullItemCallback: {
                                isFocused = false
                                movieListViewModel.showMovieDetailView(with: movie)
                            }).accessibilityIdentifier("imageButton")
                        }
                    }
                }.frame(width: UIScreen.screenWidth - standardMargin, alignment: .leading)
                .onAppear {
                    scrollViewProxy = proxy
                }
...
