...
        var width = CGFloat.zero
        var height = CGFloat.zero
        
        return ZStack(alignment: .topLeading) {
            ForEach(0..<movieListViewModel.tags.count, id: \.self) { index in
                item(for: movieListViewModel.tags[index].title, isSelected: movieListViewModel.tags[index].isSelected)
                    .accessibilityIdentifier("tagButton")
                    .padding([.horizontal, .vertical], 4)
                    .alignmentGuide(.leading, computeValue: { d in
                        if (abs(width - d.width) > g.size.width) {
                            width = 0
                            height -= d.height
                        }
...
