...
    var body: some View {
        VStack(alignment: .leading) {
            HStack () {
                Spacer()
                CloseButtonView(action: {
                    movieListViewModel.isShowMovieDetailView = false
                }, tintColor: TVThemeColor.TVGray.Color).accessibilityIdentifier("closeDetailButton")
            }.frame(alignment: .topTrailing)
            HStack() {
                VStack() {
                    KFImage.url(URL(string: Constants.baseURL + (viewModel.movie.moviePictures[Constants.imagePoster] ?? ""))!)
                        .placeholder {
                            ProgressView()
...
